# SDL-demos

./: CMakeLists.txt  Jenkinsfile  rects.cpp  titlebar.cpp
